--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.11.32",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "fs": "^0.0.1-security",
     "luxon": "^2.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "srt-to-json": "^1.0.1",
+    "subtitle": "^4.1.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
